force-app/main/default/objects/Activity/fields/tr_wc1__tr_Event_External_Id__c.field-meta.xml
<CustomField>
    <fullName>tr_wc1__tr_Event_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Event External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>