force-app/main/default/objects/Activity/fields/Usecase_s_Relevant_for_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Usecase_s_Relevant_for_Prospect__c</fullName>
    <label>Usecase/s Relevant for Prospect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>