force-app/main/default/objects/Activity/fields/Web_Form_Formula_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Form_Formula_Name__c</fullName>
    <label>Web Form Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>