force-app/main/default/objects/Activity/fields/YayPay_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>YayPay_Activity_Date__c</fullName>
    <description>Used by YayPay integration to hold YayPay activity date</description>
    <label>YayPay Activity Date</label>
    <type>DateTime</type>
</CustomField>