force-app/main/default/objects/Activity/listViews/Devin_s_Tasks_Today_Tomorrow.listView-meta.xml
<ListView>
    <fullName>Devin_s_Tasks_Today_Tomorrow</fullName>
    <columns>TASK.CREATED_DATE</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>REMINDER_DATE_TIME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>lessOrEqual</operation>
        <value>TOMORROW</value>
    </filters>
    <label>Devin&apos;s Tasks (Today + Tomorrow )</label>
</ListView>