force-app/main/default/objects/Activity/listViews/Devin_Tasks_All.listView-meta.xml
<ListView>
    <fullName>Devin_Tasks_All</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>REMINDER_DATE_TIME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Devin Tasks All</label>
</ListView>