force-app/main/default/objects/Activity/listViews/ENT_CSM_ROW_Open_Tasks.listView-meta.xml
<ListView>
    <fullName>ENT_CSM_ROW_Open_Tasks</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Team</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed,Rejected</value>
    </filters>
    <label>ENT CSM ROW Open Tasks</label>
</ListView>