force-app/main/default/objects/Activity/listViews/Named_Account_Management1.listView-meta.xml
<ListView>
    <fullName>Named_Account_Management1</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_ROLE</field>
        <operation>contains</operation>
        <value>SDR</value>
    </filters>
    <label>Named Account Management</label>
</ListView>