force-app/main/default/objects/Activity/listViews/TodaysTasks.listView-meta.xml
<ListView>
    <fullName>TodaysTasks</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.STATUS</columns>
    <columns>IS_REMINDER_SET</columns>
    <columns>REMINDER_DATE_TIME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>lessThan</operation>
        <value>TOMORROW</value>
    </filters>
    <label>DanG Tasks</label>
</ListView>